opam-version: "1.2"
version: "1.0"
maintainer: "Vincent Jacques <vincent@vincent-jacques.net>"
authors: "Vincent Jacques <vincent@vincent-jacques.net>"
homepage: "https://jacquev6.github.io/Collide/"
doc: "https://jacquev6.github.io/Collide/"
dev-repo: "https://github.com/jacquev6/Collide.git"
bug-reports: "http://github.com/jacquev6/Collide/issues/"
license: "MIT"
available: [ocaml-version >= "4.06.1"]
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: [
  ["jbuilder" "runtest" "-p" name]
]
depends: [
  "jbuilder" {build}
  "General" {>= "0.5.0"}
  "JsOfOCairo" {build & >= "1.1.0"}
  "cairo2" {>= "0.5"}
  "lablgtk" {>= "2.18.6"}
]
