opam-version: "2.0"
version: "1.0.1"
maintainer: "Vincent Jacques <vincent@vincent-jacques.net>"
authors: "Vincent Jacques <vincent@vincent-jacques.net>"
homepage: "https://jacquev6.github.io/Collide/"
bug-reports: "http://github.com/jacquev6/Collide/issues/"
license: "MIT"
doc: "https://jacquev6.github.io/Collide/"
dev-repo: "git+https://github.com/jacquev6/Collide.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "ocaml" {>= "4.06.1"}
  "JsOfOCairo" {build & >= "1.1.1" & < "2"}
  "dune" {build & >= "1.4.0"}
  "General" {>= "0.6.0"}
  "cairo2" {>= "0.5" & < "0.6"}
  "lablgtk" {>= "2.18.6"}
]
synopsis:
  "Event-based simulation of elastic collisions between balls"
